nickel-lang-cli/tests/snapshot/inputs/errors/typed_field_without_annotation.ncl
# capture = 'stderr'
# command = []
{
  foo : Number
      | doc "foo",
  bar : String,
}
